[package]
name = "tokio_safe_for_AIngle"
version = "0.1.2"
authors = ["AIngle Dev Team <developers@aingle.ai>"]
edition = "2018"
description = "execute async code from a sync context, without blocking a tokio core thread or busy looping the cpu."
keywords = ["tokio core", "asynchronous"]
categories = ["asynchronous"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Daironode/tokio_safe"

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["time", "blocking", "rt-core", "rt-util", "rt-threaded"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
